# scrubcast

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: redaction-model.md
examples/: README.md  ci-log.txt  demo.cast  scrubcast-rules.json
scripts/: smoke.sh
src/scrubcast/: __init__.py  __main__.py  ansi.py  cast.py  cli.py  config.py  detectors.py  engine.py  entropy.py  errors.py  report.py
tests/: conftest.py  test_ansi.py  test_cast.py  test_cli.py  test_config.py  test_detectors.py  test_engine.py  test_entropy.py  test_readme_examples.py
