[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrubcast"
version = "0.1.0"
description = "Redact secrets from terminal recordings and ANSI logs — rules plus entropy detection, with escape-sequence-aware replacement that keeps recordings playable."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["redaction", "secrets", "asciinema", "ansi", "terminal", "security", "logs", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
scrubcast = "scrubcast.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/scrubcast"
Repository = "https://github.com/JaydenCJ/scrubcast"
Issues = "https://github.com/JaydenCJ/scrubcast/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
